kubernetes/apps/datasci/spark/app/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master-external
  namespace: datasci
  annotations:
    io.cilium/lb-ipam-ips: "${SVC_SPARK_ADDR}"
spec:
  type: LoadBalancer
  ports:
    - name: cluster
      port: 7077
      targetPort: cluster
      protocol: TCP
    - name: ui
      port: 8080
      targetPort: http
      protocol: TCP
    - name: rest
      port: 6066
      targetPort: rest
      protocol: TCP
  selector:
    app.kubernetes.io/name: spark
    app.kubernetes.io/component: master
