kubernetes/apps/datasci/spark/app/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: spark-master
  namespace: datasci
spec:
  host: spark-master-svc.datasci.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1000
        connectTimeout: 120s
        tcpKeepalive:
          time: 7200s
          interval: 75s
          probes: 9
    outlierDetection:
      consecutive5xxErrors: 10
      interval: 300s
      baseEjectionTime: 300s
