kubernetes/apps/datasci/spark/app/sparkapplication.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-ui
  namespace: datasci
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 4040
      targetPort: 4040
      protocol: TCP
  selector:
    spark-role: driver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ui
  namespace: datasci
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  ingressClassName: internal
  rules:
    - host: spark.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-ui
                port:
                  name: ui
  tls:
    - hosts:
        - spark.${SECRET_DOMAIN}
