kubernetes/apps/datasci/spark/app/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: spark-master-tcp
  namespace: datasci
spec:
  parentRefs:
  - name: cluster-gateway
    namespace: istio-system
    sectionName: spark-master # Must match the listener name in Gateway
  rules:
  - backendRefs:
    - name: spark-master-external
      port: 7077
