kubernetes/apps/datasci/spark/app/virtualservice.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spark-dashboard
  namespace: datasci
spec:
  parentRefs:
  - name: cluster-gateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - "spark.istio.local"
  rules:
  - backendRefs:
    - name: spark-master-svc
      port: 8080
